# ghc-t16211-t16234

./: README.md  cabal.project
ghc-t16211/: Bar.hs  Main.hs  ghc-t16211.cabal
ghc-t16234/: Main.hs  ghc-t16234.cabal
monad-classes-minimal/: monad-classes-minimal.cabal
monad-classes-minimal/Control/Monad/: Classes.hs
monad-classes-minimal/Control/Monad/Classes/: Core.hs  Effects.hs  Reader.hs  State.hs
monad-classes-minimal/Data/: Peano.hs
primitive-minimal/: LICENSE  primitive-minimal.cabal
primitive-minimal/Control/Monad/: Primitive.hs
