version:             0.0.0.1
name:                ghc-t16211
synopsis:            Bug
license:             GPL-3
license-file:        LICENSE
category:            Crypto
stability:           experimental
build-type:          Simple
cabal-version:       >= 1.10
description:         GHC bug

executable bug
  default-language: Haskell2010
  main-is:          Main.hs
  ghc-options: -O2

  other-modules:
    Bar

  build-depends:
    base,
    monad-classes-minimal,
    primitive-minimal,
    transformers
