cabal-version:  >=1.10
name:           primitive-minimal
version:        0.7.0.0
Author:         Roman Leshchinskiy <rl@cse.unsw.edu.au>
Maintainer:     libraries@haskell.org
Copyright:      (c) Roman Leshchinskiy 2009-2012
Homepage:       https://github.com/haskell/primitive
Bug-Reports:    https://github.com/haskell/primitive/issues
Category:       Data
Synopsis:       Primitive memory-related operations
Build-Type:     Simple
Description:    This package provides various primitive memory-related operations.

library
  exposed-modules:     Control.Monad.Primitive
  build-depends:       base >= 4.5 && < 5, transformers
  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:         -Wall
